# php/swag/app/Http/Requests/LoginRequest.php
@@ -3,7 +3,14 @@
 namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
-
+/**
+ * @OA\Schema(
+ *      title="Login Request request",
+ *      description="Reqest for auth users request body data",
+ *      type="object",
+ *      required={"email", "password"}
+ * )
+ */
 class LoginRequest extends FormRequest
 {
     /**
@@ -15,6 +22,25 @@ class LoginRequest extends FormRequest
     {
         return true;
     }
+
+    /**
+     * @OA\Property(
+     *      title="email",
+     *      description="email for login",
+     *      example="asdsad@qq.ee"
+     * ),
+     */
+    private $email;
+    /**
+     * @OA\Property(
+     *      title="password",
+     *      description="Username password",
+     *      example="demo1234"
+     * ),
+     *
+     */
+    private $password;
+
 
     /**
      * Get the validation rules that apply to the request.
